--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "react-table": "^6.10.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
